[package]
name = "clue"
version = "2.2.1-wasm"
description = "C/Rust like programming language that compiles into Lua code\nMade by Maiori\nhttps://github.com/ClueLang/Clue"
edition = "2018"
build = "build.rs"
authors = ["Maiori"]

[build-dependencies]
winres = "0.1"

[lib]
crate-type = ["cdylib", "rlib"]