[package]
name = "clue"
version = "3.1.0"
description = "C/Rust like programming language that compiles into Lua code\nMade by Maiori\nhttps://github.com/ClueLang/Clue"
edition = "2018"
authors = ["Maiori"]

[dependencies]
clue_core = { version = "^3.0", default-features = false }
wasm-bindgen = "0.2.63"
getrandom = { version = "^0.2", features = ["js"] }


[lib]
crate-type = ["cdylib", "rlib"]
